Fixed Jumping between editors

--- a/css/style.fallback.css
+++ b/css/style.fallback.css
@@ -255,3 +255,8 @@ div.issueDescription {
   height: 1px;
   z-index: 1000;
 }
+
+#pseudo {
+  width: 1px;
+  height: 1px;
+}
