--- a/css/style.scss
+++ b/css/style.scss
@@ -227,3 +227,8 @@ div.issueDescription {
 	height:1px;
 	z-index:1000;
 }
+
+#pseudo {
+	width:1px;
+	height:1px;
+}
